--- a/notebooks/TeoriaComputacion_1.ipynb
+++ b/notebooks/TeoriaComputacion_1.ipynb
@@ -133,11 +133,39 @@
     }
    },
    "source": [
+    "# Repositorio en GitHub\n",
+    "\n",
+    "<img src='../figuras/RepositorioGitHub.png' width=\"75%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# JFLAP\n",
     "\n",
     "JFLAP es un software para experimentar con temas de lenguajes formales que incluyen autómatas finitos no deterministas, autómatas a pila, Máquinas Turing.\n",
     "\n",
     "<img src='../figuras/JFlap_automata.png'/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Jove\n",
+    "\n",
+    "Jove es la colección de notebooks de Jupyter creada por Ganesh Gopalakrishnan para enseñar Modelos de Computación.\n",
+    "\n",
+    "<img src='../figuras/Jove_automata.png'/>"
    ]
   },
   {
