--- a/notebooks/TeoriaComputacion_1.ipynb
+++ b/notebooks/TeoriaComputacion_1.ipynb
@@ -437,6 +437,301 @@
     "- Puesto que el número de estados es finito, el sistema debe ser diseñado para recordar aquello que es importante y olvidar lo que no.\n",
     "- La ventaja de tener un número finito de estados es que el sistema podrá ser implementado con un conjunto fijo de recursos. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Preliminares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Conjuntos\n",
+    "\n",
+    "- **Definición**: Un conjunto es una colección no ordenada de objetos o elementos.\n",
+    "    - Los conjuntos se escriben con llaves {}.\n",
+    "    - Los elementos en el conjunto se escriben entre las llaves\n",
+    "- **Definition**:\n",
+    "    - Para cualquier conjunto $S$, \"$x ∈ S$\" denota que $x$ es un elemento del conjunto $S$.\n",
+    "    - Además, \"$y ∉ S$\" denota que $y$ no es un elemento del conjunto $S$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Observación**: a menudo especificamos un conjunto utilizando la notación de conjunto, por ejemplo, \n",
+    "$$\\{x | x ∈ \\mathbb{R}, x^2 - 4 = 0\\}$$\n",
+    "- $\\mathbb{R}$ denota el conjunto de números reales.\n",
+    "- $|$ Significa \"tal que\"\n",
+    "- Coma significa \"y\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Ejemplos de conjuntos\n",
+    "\n",
+    "- El conjunto $\\{a, b, c\\}$ tiene elementos $a$, $b$ y $c$.\n",
+    "- Los conjuntos $\\{a, b, c\\}$ y $\\{b, c, b, a, a\\}$ son iguales\n",
+    "    - El orden y la redundancia no importan en un conjunto\n",
+    "- El conjunto $\\{a\\}$ tiene el elemento $a$.\n",
+    "    - $\\{a\\}$ y $a$ son cosas diferentes.\n",
+    "    - $\\{a\\}$ es un conjunto con un elemento $a$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- El conjunto $\\mathbb{Z}$ de **enteros** es \n",
+    "$$\\{..., - 2, −1,0,1,2, ...\\}$$\n",
+    "- El conjunto $\\mathbb{Z}_+$ de enteros no negativos es \n",
+    "$$\\{0,1,2,3, ...\\}$$\n",
+    "- El conjunto de números pares es\n",
+    "$$\\{0,2,4,6,8,10,12, ...\\}$$, \n",
+    "que también podemos escribir como \n",
+    "$$\\{2n | n = 0,1,2, ...\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- El conjunto de números impares\n",
+    "$$\\{1,3,5,7,9,11,13, ...\\}$$\n",
+    "también se puede escribir como \n",
+    "$$\\{2n + 1 | n = 1,3,5, ...\\}$$\n",
+    "**Ejemplo**: si $A$ es el conjunto $\\{2n | n = 0,1,2, ...\\}$,\n",
+    "entonces $4 ∈ A$, pero $5 ∉ A$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Alfabetos\n",
+    "\n",
+    "Un alfabeto es un conjunto finito de unidades fundamentales (llamadas letras o\n",
+    "símbolos).\n",
+    "\n",
+    "**Observación**: normalmente denotamos un alfabeto con una letra griega mayúscula\n",
+    "- por ejemplo, $\\Sigma$ o $\\Gamma$ (es decir, Sigma o Gamma)\n",
+    "\n",
+    "**Ejemplos**\n",
+    "- El alfabeto de las 26 letras romanas en minúscula es\n",
+    "$$\\Sigma = \\{a, b, c, ..., z\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- El alfabeto de las 26 letras romanas mayúsculas es\n",
+    "$$Γ = \\{A, B, C, ..., Z\\}$$\n",
+    "- El alfabeto de los 10 números arábigos es\n",
+    "$$Σ = \\{0,1,2, ..., 9\\}$$\n",
+    "- En esta clase usaremos a menudo los alfabetos\n",
+    "$$Σ = {a, b}$$\n",
+    "$$Σ = {0,1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Secuencias y cadenas\n",
+    "\n",
+    "**Definición**: La secuencia de objetos es una lista de estos objetos en algún orden.\n",
+    "- El orden y la redundancia importan en una secuencia, a diferencia de un conjunto.\n",
+    "- $a$, $b$, $c$ y $b$, $c$, $b$, $a$, $a$ son secuencias diferentes.\n",
+    "- $\\{a, b, c\\}$ y $\\{b, c, b, a, a\\}$ son el mismo conjunto.\n",
+    "\n",
+    "**Definición**: una cadena sobre un alfabeto es una secuencia finita de\n",
+    "símbolos del alfabeto (escritos sin comas o espacios entre\n",
+    "los símbolos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Ejemplos\n",
+    "\n",
+    "- $x$, $trolulent$, $amzixxen$ y $qwertyuio$ cadenas sobre el alfabeto\n",
+    "$$Σ = \\{a, b, c, ..., z\\}$$\n",
+    "- 0131 es una cadena sobre el alfabeto\n",
+    "$$Σ = \\{0,1,2, ..., 9\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Longitud de una cadena\n",
+    "\n",
+    "**Definición**: La longitud de una cadena $w$ es el número de símbolos en $w$.\n",
+    "- Algunas veces se denota la longitud de $w$ con longitud$(w)$ o $|w|$.\n",
+    "\n",
+    "**Ejemplo**: longitud$(casa)$ = $|casa|$ = 4\n",
+    "\n",
+    "**Definición**: La cadena vacía o cadena nula, denotada por $ε$ (es decir, épsilon), es la cadena que no consta de símbolos, es decir,\n",
+    "$$| ε | = 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Estrella de Kleene\n",
+    "\n",
+    "**Definición**: para un alfabeto dado $Σ$, deje que $Σ^∗$ denote el conjunto de todas las cadenas posibles (incluyendo $ε$) sobre $Σ$.\n",
+    "\n",
+    "**Ejemplo**: si $Σ = \\{a, b\\}$, entonces\n",
+    "$$Σ^∗ = \\{ε, a, b, aa, ab, ba, bb, aaa, aab, aba, abb,. . .\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Ordenamiento de Cadenas\n",
+    "\n",
+    "**Definición**: una lista de cadenas $w_1$, $w_2$, ... sobre un alfabeto $Σ$ está en orden de cadena (también llamado orden lexicográfico) si\n",
+    "1. las cadenas más cortas siempre aparecen antes que las cadenas más largas, y\n",
+    "2. las cadenas de la misma longitud aparecen en orden alfabético.\n",
+    "\n",
+    "**Ejemplo**: si $Σ = \\{0,1\\}$, el orden de las cadenas en $Σ^∗$ es\n",
+    "$$ε, 0,1,00,01,10,11,000,001,010,011, ...$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Concatenación\n",
+    "\n",
+    "**Definición**: La concatenación de las cadenas $x$ e $y$ es la cadena $xy$.\n",
+    "\n",
+    "**Ejemplos**:\n",
+    "- Si $x = luna$ e $y = sol$, entonces $xy = lunasol$ e $yx = solluna$.\n",
+    "- Si $x = ε$ e $y = ab$, entonces $xy = ab = yx$.\n",
+    "- Si $x = ε$ e $y = ε$, entonces $xy = ε = yx$; es decir, $εε = ε$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Definición**: para la cadena $w$, definimos $w^n$ para $n≥0$ inductivamente como\n",
+    "- $w^0 = ε$;\n",
+    "- $w^n = w^{n − 1}w$ para cualquier $n≥1$.\n",
+    "\n",
+    "**Ejemplo**:\n",
+    "si $w = casa$, entonces\n",
+    "$$w^0 = ε,\\\\\n",
+    "w^1 = w^0w = εcasa \\\\\n",
+    "w^2 = w^1w = casacasa\\\\\n",
+    "w^3 = w^2w = casacasacasa\\\\\n",
+    "...$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Ejemplo**: también se puede aplicar esto a un solo símbolo\n",
+    "\n",
+    "- $a^3=aaa$\n",
+    "- $a^0=ε$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Subcadenas\n",
+    "\n",
+    "**Definición**: Una subcadena de una cadena $w$ es cualquier parte contigua de $w$.\n",
+    "- es decir, $y$ es una subcadena de $w$ si existen cadenas $x$ y $z$ (una o ambas posiblemente vacío) tal que $w = xyz$.\n",
+    "\n",
+    "**Ejemplos**:\n",
+    "- $y = 47$ es una subcadena de $w = 472$ ya que permite que $x = ε$ y $z = 2$ da $w = xyz$.\n",
+    "- La cadena $472$ tiene subcadenas $ε, 4,7,2,47,72$ y $472$.\n",
+    "- $42$ no es una subcadena de $472$."
+   ]
   }
  ],
  "metadata": {
