Agregar clases en pdf

--- a/notebooks/TeoriaComputacion_1.ipynb
+++ b/notebooks/TeoriaComputacion_1.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "# Repositorio en GitHub\n",
     "\n",
-    "<img src='../figuras/RepositorioGitHub.png' width=\"75%\"/>"
+    "![](../figuras/RepositorioGitHub.png)"
    ]
   },
   {
@@ -150,7 +150,7 @@
     "\n",
     "JFLAP es un software para experimentar con temas de lenguajes formales que incluyen autómatas finitos no deterministas, autómatas a pila, Máquinas Turing.\n",
     "\n",
-    "<img src='../figuras/JFlap_automata.png'/>"
+    "![](../figuras/JFlap_automata.png)"
    ]
   },
   {
@@ -165,7 +165,7 @@
     "\n",
     "Jove es la colección de notebooks de Jupyter creada por Ganesh Gopalakrishnan para enseñar Modelos de Computación.\n",
     "\n",
-    "<img src='../figuras/Jove_automata.png'/>"
+    "![](../figuras/Jove_automata.png)"
    ]
   },
   {
@@ -463,8 +463,8 @@
     "    - Los conjuntos se escriben con llaves {}.\n",
     "    - Los elementos en el conjunto se escriben entre las llaves\n",
     "- **Definition**:\n",
-    "    - Para cualquier conjunto $S$, \"$x ∈ S$\" denota que $x$ es un elemento del conjunto $S$.\n",
-    "    - Además, \"$y ∉ S$\" denota que $y$ no es un elemento del conjunto $S$."
+    "    - Para cualquier conjunto $S$, \"$x \\in S$\" denota que $x$ es un elemento del conjunto $S$.\n",
+    "    - Además, \"$y \\notin S$\" denota que $y$ no es un elemento del conjunto $S$."
    ]
   },
   {
@@ -476,9 +476,9 @@
    },
    "source": [
     "**Observación**: a menudo especificamos un conjunto utilizando la notación de conjunto, por ejemplo, \n",
-    "$$\\{x | x ∈ \\mathbb{R}, x^2 - 4 = 0\\}$$\n",
+    "$$\\{x | x \\in \\mathbb{R}, x^2 - 4 = 0\\}$$\n",
     "- $\\mathbb{R}$ denota el conjunto de números reales.\n",
-    "- $|$ Significa \"tal que\"\n",
+    "- $\\mid$ Significa \"tal que\"\n",
     "- Coma significa \"y\""
    ]
   },
@@ -531,7 +531,7 @@
     "también se puede escribir como \n",
     "$$\\{2n + 1 | n = 0,1,2, ...\\}$$\n",
     "**Ejemplo**: si $A$ es el conjunto $\\{2n | n = 0,1,2, ...\\}$,\n",
-    "entonces $4 ∈ A$, pero $5 ∉ A$."
+    "entonces $4 \\in A$, pero $5 \\notin A$."
    ]
   },
   {
@@ -564,12 +564,12 @@
    },
    "source": [
     "- El alfabeto de las 26 letras romanas mayúsculas es\n",
-    "$$Γ = \\{A, B, C, ..., Z\\}$$\n",
+    "$$\\Gamma = \\{A, B, C, ..., Z\\}$$\n",
     "- El alfabeto de los 10 números arábigos es\n",
-    "$$Σ = \\{0,1,2, ..., 9\\}$$\n",
+    "$$\\Sigma = \\{0,1,2, ..., 9\\}$$\n",
     "- En esta clase usaremos a menudo los alfabetos\n",
-    "$$Σ = \\{a, b\\}$$\n",
-    "$$Σ = \\{0,1\\}$$"
+    "$$\\Sigma = \\{a, b\\}$$\n",
+    "$$\\Sigma = \\{0,1\\}$$"
    ]
   },
   {
@@ -603,9 +603,9 @@
     "# Ejemplos\n",
     "\n",
     "- $x$, $trolulent$, $amzixxen$ y $qwertyuio$ cadenas sobre el alfabeto\n",
-    "$$Σ = \\{a, b, c, ..., z\\}$$\n",
+    "$$\\Sigma = \\{a, b, c, ..., z\\}$$\n",
     "- 0131 es una cadena sobre el alfabeto\n",
-    "$$Σ = \\{0,1,2, ..., 9\\}$$"
+    "$$\\Sigma = \\{0,1,2, ..., 9\\}$$"
    ]
   },
   {
@@ -624,7 +624,7 @@
     "**Ejemplo**: longitud$(casa)$ = $|casa|$ = 4\n",
     "\n",
     "**Definición**: La cadena vacía o cadena nula, denotada por $ε$ (es decir, épsilon), es la cadena que no consta de símbolos, es decir,\n",
-    "$$| ε | = 0$$"
+    "$$| \\epsilon | = 0$$"
    ]
   },
   {
@@ -637,10 +637,10 @@
    "source": [
     "# Estrella de Kleene\n",
     "\n",
-    "**Definición**: para un alfabeto dado $Σ$, deje que $Σ^∗$ denote el conjunto de todas las cadenas posibles (incluyendo $ε$) sobre $Σ$.\n",
+    "**Definición**: para un alfabeto dado $\\Sigma$, deje que $\\Sigma^∗$ denote el conjunto de todas las cadenas posibles (incluyendo $\\epsilon$) sobre $\\Sigma$.\n",
     "\n",
-    "**Ejemplo**: si $Σ = \\{a, b\\}$, entonces\n",
-    "$$Σ^∗ = \\{ε, a, b, aa, ab, ba, bb, aaa, aab, aba, abb,. . .\\}$$"
+    "**Ejemplo**: si $\\Sigma = \\{a, b\\}$, entonces\n",
+    "$$\\Sigma^∗ = \\{\\epsilon, a, b, aa, ab, ba, bb, aaa, aab, aba, abb,. . .\\}$$"
    ]
   },
   {
@@ -653,12 +653,12 @@
    "source": [
     "# Ordenamiento de Cadenas\n",
     "\n",
-    "**Definición**: una lista de cadenas $w_1$, $w_2$, ... sobre un alfabeto $Σ$ está en orden de cadena (también llamado orden lexicográfico) si\n",
+    "**Definición**: una lista de cadenas $w_1$, $w_2$, ... sobre un alfabeto $\\Sigma$ está en orden de cadena (también llamado orden lexicográfico) si\n",
     "1. las cadenas más cortas siempre aparecen antes que las cadenas más largas, y\n",
     "2. las cadenas de la misma longitud aparecen en orden alfabético.\n",
     "\n",
-    "**Ejemplo**: si $Σ = \\{0,1\\}$, el orden de las cadenas en $Σ^∗$ es\n",
-    "$$ε, 0,1,00,01,10,11,000,001,010,011, ...$$"
+    "**Ejemplo**: si $\\Sigma = \\{0,1\\}$, el orden de las cadenas en $\\Sigma^∗$ es\n",
+    "$$\\epsilon, 0,1,00,01,10,11,000,001,010,011, ...$$"
    ]
   },
   {
@@ -674,9 +674,12 @@
     "**Definición**: La concatenación de las cadenas $x$ e $y$ es la cadena $xy$.\n",
     "\n",
     "**Ejemplos**:\n",
+    "\n",
     "- Si $x = luna$ e $y = sol$, entonces $xy = lunasol$ e $yx = solluna$.\n",
-    "- Si $x = ε$ e $y = ab$, entonces $xy = ab = yx$.\n",
-    "- Si $x = ε$ e $y = ε$, entonces $xy = ε = yx$; es decir, $εε = ε$."
+    "\n",
+    "- Si $x = \\epsilon$ e $y = ab$, entonces $xy = ab = yx$.\n",
+    "\n",
+    "- Si $x = \\epsilon$ e $y = \\epsilon$, entonces $xy = \\epsilon = yx$; es decir, $\\epsilon \\epsilon = \\epsilon$."
    ]
   },
   {
@@ -688,13 +691,15 @@
    },
    "source": [
     "**Definición**: para la cadena $w$, definimos $w^n$ para $n≥0$ inductivamente como\n",
-    "- $w^0 = ε$;\n",
-    "- $w^n = w^{n − 1}w$ para cualquier $n≥1$.\n",
+    "\n",
+    "- $w^0 = \\epsilon$;\n",
+    "\n",
+    "- $w^n = w^{n − 1}w$ para cualquier $n \\geq 1$.\n",
     "\n",
     "**Ejemplo**:\n",
     "si $w = casa$, entonces\n",
-    "$$w^0 = ε,\\\\\n",
-    "w^1 = w^0w = εcasa \\\\\n",
+    "$$w^0 = \\epsilon,\\\\\n",
+    "w^1 = w^0w = \\epsilon casa \\\\\n",
     "w^2 = w^1w = casacasa\\\\\n",
     "w^3 = w^2w = casacasacasa\\\\\n",
     "...$$"
@@ -711,7 +716,7 @@
     "**Ejemplo**: también se puede aplicar esto a un solo símbolo\n",
     "\n",
     "- $a^3=aaa$\n",
-    "- $a^0=ε$"
+    "- $a^0=\\epsilon$"
    ]
   },
   {
@@ -728,10 +733,20 @@
     "- es decir, $y$ es una subcadena de $w$ si existen cadenas $x$ y $z$ (una o ambas posiblemente vacío) tal que $w = xyz$.\n",
     "\n",
     "**Ejemplos**:\n",
+    "\n",
     "- $y = 47$ es una subcadena de $w = 472$ ya que permite que $x = ε$ y $z = 2$ da $w = xyz$.\n",
+    "\n",
     "- La cadena $472$ tiene subcadenas $ε, 4,7,2,47,72$ y $472$.\n",
+    "\n",
     "- $42$ no es una subcadena de $472$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -751,9 +766,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
