--- a/notebooks/TeoriaComputacion_2.ipynb
+++ b/notebooks/TeoriaComputacion_2.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "<center>\n",
-    "    <h1>Teoría de la Computacion</h1>\n",
+    "    <h1>Teoría de la Computación</h1>\n",
     "    <h1>Lenguajes y Gramáticas</h1>\n",
     "    <h1></h1>\n",
     "    <h5>Prof. Wladimir Rodriguez</h5>\n",
@@ -65,9 +65,9 @@
     "\n",
     "- Una palabra sobre el alfabeto $A$ es una sucesión finita de elementos de $A$.\n",
     "\n",
-    "$$u = a_1 . . . a_n$$\n",
+    "$$u = a_1 \\cdots a_n$$\n",
     "\n",
-    "- donde $a_i ∈ A, ∀i = 1, . . . , n$.\n",
+    "- donde $a_i \\in A, \\forall i = 1, \\cdots , n$.\n",
     "\n",
     "- Si $A = \\{0,1\\}$ entonces $0111$ es una palabra sobre este alfabeto"
    ]
@@ -82,9 +82,9 @@
    "source": [
     "- El conjunto de todas las palabras sobre un alfabeto $A$ se nota como A*.\n",
     "- Notación:\n",
-    "    - Palabras: $u, v, x, y, z, . . .$\n",
-    "- Si $u ∈ A^*$, entonces la longitud de la palabra $u$ es el número de símbolos de $A$ que contiene.\n",
-    "- Notación: $⎮u⎮$"
+    "    - Palabras: $u, v, x, y, z, \\cdots$\n",
+    "- Si $u \\in A^*$, entonces la longitud de la palabra $u$ es el número de símbolos de $A$ que contiene.\n",
+    "- Notación: $\\mid u \\mid$"
    ]
   },
   {
@@ -96,7 +96,7 @@
    },
    "source": [
     "- La palabra vacía es la palabra de longitud cero.\n",
-    "- Notación: $ε$\n",
+    "- Notación: $\\epsilon$\n",
     "- Notación: El conjunto de cadenas sobre un alfabeto $A$ excluyendo la cadena vacía se nota como $A^+$."
    ]
   },
@@ -124,9 +124,9 @@
    },
    "source": [
     "- Propiedades:\n",
-    "    1. $⎮u.v⎮ = ⎮u⎮ + ⎮v⎮$,   $∀u,v ∈ A^*$\n",
-    "    2. Asociativa: $u.(v.w) = (u.v).w$,   $∀u,v,w ∈ A^*$\n",
-    "    3. Elemento Neutro: $u.ε = ε.u = u$,   $∀u ∈ A^*$\n",
+    "    1. $\\mid u.v \\mid = \\mid u \\mid + \\mid v \\mid$,   $\\forall u,v \\in A^*$\n",
+    "    2. Asociativa: $u.(v.w) = (u.v).w$,   $\\forall u,v,w \\in A^*$\n",
+    "    3. Elemento Neutro: $u.\\epsilon = \\epsilon .u = u$,   $\\forall u \\in A^*$\n",
     "- Estructura de monoide"
    ]
   },
@@ -141,9 +141,9 @@
     "# Iteración\n",
     "\n",
     "- La Iteración n-esima de una cadena ($u^n$) es la concatenación con ella misma $n$ veces.\n",
-    "- Si $u ∈ A^*$ entonces\n",
-    "    - $u^0 = ε$\n",
-    "    - $u^{i+1} = u^i.u$,   $∀i ≥ 0$\n",
+    "- Si $u \\in A^*$ entonces\n",
+    "    - $u^0 = \\epsilon$\n",
+    "    - $u^{i+1} = u^i.u$,   $\\forall i \\geq 0$\n",
     "- Ejemplo:\n",
     "    - Si $u = 010$, entonces $u^3 = 010010010$."
    ]
@@ -158,7 +158,7 @@
    "source": [
     "# Cadena Inversa\n",
     "\n",
-    "- Si $u = a_1 . . . a_n ∈ A^*$, entonces la cadena inversa de $u$ es la cadena $u^{-1} = a_n . . . a_1 ∈ A^*$.\n",
+    "- Si $u = a_1 \\cdots a_n \\in A^*$, entonces la cadena inversa de $u$ es la cadena $u^{-1} = a_n \\cdots a_1 \\in A^*$.\n",
     "- Ejemplo:\n",
     "    - Si $u = 011$, entonces $u^{-1} = 110$."
    ]
@@ -173,14 +173,14 @@
    "source": [
     "# Lenguajes\n",
     "\n",
-    "- Un lenguaje sobre el alfabeto $A$ es un subconjunto del conjunto de las cadenas sobre $A: L ⊆ A^*$.\n",
+    "- Un lenguaje sobre el alfabeto $A$ es un subconjunto del conjunto de las cadenas sobre $A: L \\subseteq A^*$.\n",
     "- Notación:\n",
-    "    - Lenguajes: $L, M, N, . . .$\n",
+    "    - Lenguajes: $L, M, N, \\cdots$\n",
     "- Ejemplos:\n",
-    "    - $L_1 = \\{a, b, ε\\}$\n",
-    "    - $L_2 = \\{a^ib^i ⎮ i = 0, 1, 2, . . . \\}$\n",
-    "    - $L_3 = \\{uu^{-1} ⎮ u ∈ A^*\\}$\n",
-    "    - $L_4 = \\{a^{n^2} ⎮ n = 1, 2, 3, . . .\\}$"
+    "    - $L_1 = \\{a, b, \\epsilon\\}$\n",
+    "    - $L_2 = \\{a^ib^i \\mid i = 0, 1, 2, \\cdots \\}$\n",
+    "    - $L_3 = \\{uu^{-1} \\mid u \\in A^*\\}$\n",
+    "    - $L_4 = \\{a^{n^2} \\mid n = 1, 2, 3, \\cdots\\}$"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "- Aparte de las operaciones de unión e intersección de lenguajes, dada su condición de conjuntos existe la operación de concatenación.\n",
     "- Si $L_1$, $L_2$ son dos lenguajes sobre el alfabeto $A$, la concatenación de estos dos lenguajes se define como\n",
     "\n",
-    "$$L_1L_2 = \\{u_1u_2 ⎮ u_1 ∈ L_1, u_2 ∈ L_2\\}$$"
+    "$$L_1L_2 = \\{u_1u_2 \\mid u_1 \\in L_1, u_2 \\in L_2\\}$$"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "source": [
     "- Propiedades:\n",
     "    - $L\\Phi = \\Phi L = L$\n",
-    "    - Elemento Neutro: $\\{ε\\}L = L\\{ε\\} = L$\n",
+    "    - Elemento Neutro: $\\{\\epsilon\\}L = L\\{\\epsilon\\} = L$\n",
     "    - Asociativa: $L_1(L_2L_3) = (L_1L_2)L_3$"
    ]
   },
@@ -224,11 +224,11 @@
     "# Operaciones: Iteración\n",
     "\n",
     "- La iteración de lenguajes se define de forma recursiva:\n",
-    "$$L^0 = \\{ε\\},$$\n",
+    "$$L^0 = \\{\\epsilon\\},$$\n",
     "$$L^{i+1} = L^iL$$\n",
     "- Si L es un lenguaje sobre el alfabeto A, la clausura de Kleene de L es:\n",
-    "$$L^* = \\cup_{i≥0}L^i$$\n",
-    "$$L^+ = ∪_{i≥1}L^i$$"
+    "$$L^* = \\cup_{i \\geq 0}L^i$$\n",
+    "$$L^+ = \\cup_{i \\geq 1}L^i$$"
    ]
   },
   {
@@ -240,10 +240,10 @@
    },
    "source": [
     "- Propiedades:\n",
-    "    - $L^+ = L^*$ si $ε ∈ L$\n",
-    "    - $L^+ = L^* - {ε}$ si $ε ∉ L$\n",
+    "    - $L^+ = L^*$ si $\\epsilon \\in L$\n",
+    "    - $L^+ = L^* - {\\epsilon}$ si $\\epsilon \\notin L$\n",
     "- El lenguaje inverso de L es el lenguaje dado por:\n",
-    "    - $L^{-1} = \\{u ⎮ u^{-1} ∈ L\\}$"
+    "    - $L^{-1} = \\{u \\mid u^{-1} \\in L\\}$"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "source": [
     "# Ejemplos\n",
     "\n",
-    "- Si $L_1 = \\{0^i1^i : i ≥ 0\\}$,   $L_2 = \\{1^i0^i : i ≥ 0\\}$ entonces,\n",
+    "- Si $L_1 = \\{0^i1^i : i \\geq 0\\}$,   $L_2 = \\{1^i0^i : i \\geq 0\\}$ entonces,\n",
     "- $L_1L_2$ ? "
    ]
   },
@@ -295,7 +295,7 @@
     "# Operaciones: Cabecera\n",
     "\n",
     "- La cabecera de L es el lenguaje dado por\n",
-    "$$CAB(L) = \\{u ⎮ u ∈ A^* \\hspace{2 mm}y \\hspace{2 mm}∃v ∈ A^*\\hspace{2 mm} tal\\hspace{1 mm}que \\hspace{2 mm}uv ∈ L\\}$$\n"
+    "$$CAB(L) = \\{u \\mid u \\in A^* \\hspace{2 mm}y \\hspace{2 mm}\\exists v \\in A^*\\hspace{2 mm} tal\\hspace{1 mm}que \\hspace{2 mm}uv \\in L\\}$$\n"
    ]
   },
   {
@@ -309,12 +309,12 @@
     "# Operaciones Homomorfismo\n",
     "\n",
     "- Si $A_1$ y $A_2$ son dos alfabetos, una aplicación\n",
-    "$$h : A_1^* → A_2^*$$\n",
+    "$$h : A_1^* \\to A_2^*$$\n",
     "- se dice que es un homomorfismo si y solo si\n",
     "$$h(uv) = h(u)h(v)$$\n",
     "- Consecuencias:\n",
-    "$$h(ε) = ε$$\n",
-    "$$h(a_1 . . . a_n) = h(a_1) . . . h(a_n)$$"
+    "$$h(\\epsilon) = \\epsilon$$\n",
+    "$$h(a_1 \\cdots a_n) = h(a_1) \\cdots h(a_n)$$"
    ]
   },
   {
@@ -342,12 +342,28 @@
     }
    },
    "source": [
+    "# Gramáticas\n",
+    "\n",
+    "- Una gramática describe la estructura de las frases de un lenguaje y se aplica por igual a:\n",
+    "    - Lenguajes naturales\n",
+    "    - Lenguajes formales\n",
+    "- Una gramática es un *ente formal* para especificar de manera finita el conjunto de cadenas de símbolos que constituyen un lenguaje."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Gramáticas Generativas\n",
     "\n",
     "- Una gramática generativa es una cuádrupla $(V, T, P, S)$ en la que\n",
     "    - $V$ es un alfabeto, llamado de variables o símbolos no terminales. Sus elementos se suelen representar con letras mayúsculas.\n",
     "    - $T$ es un alfabeto, llamado de símbolos terminales. Sus elementos se suelen representar con letras minúsculas.\n",
-    "    - $P$ es un conjunto de pares $(α, β)$, llamados reglas de producción, donde $α, β ∈ (V ∪ T)^*$ y $α$ contiene, al menos un símbolo de $V$. El par $(α, β)$ se suele representar como $α → β$\n",
+    "    - $P$ es un conjunto de pares $(\\alpha, \\beta)$, llamados reglas de producción, donde $\\alpha, \\beta \\in (V \\cup T)^*$ y $\\alpha$ contiene, al menos un símbolo de $V$. El par $(\\alpha, \\beta)$ se suele representar como $\\alpha \\to \\beta$\n",
     "    - $S$ es un elemento de $V$, llamado símbolo de inicio."
    ]
   },
@@ -485,10 +501,11 @@
    "source": [
     "# Paso de Derivación\n",
     "\n",
-    "- Gramática $G = (V, T, P, S)$ y dos palabras $α, β ∈ (V ∪ T)^*$ $β$ es derivable a partir de $α$ en un paso $(α ⇒ β)$ si y solo si\n",
-    "  - existen palabras $δ_1,\\hspace{1 mm} δ_2 ∈ (V ∪ T)^*$ \n",
-    "  - y una producción  $γ → \\varphi$ tales que\n",
-    "$$α = δ_1γδ_2, \\hspace{2 mm}        β = δ_1\\varphiδ_2$$"
+    "- Gramática $G = (V, T, P, S)$ y dos palabras $\\alpha, \\beta \\in (V \\cup T)^*$, $\\beta$ es derivable a partir de $\\alpha$ en un paso $(\\alpha \\Rightarrow \\beta)$ si y solo si\n",
+    "  - existen palabras $\\delta_1, \\delta_2 \\in (V \\cup T)^*$,\n",
+    "  - y una producción $\\gamma \\to \\varphi$ tales que\n",
+    "  \n",
+    "$$\\alpha = \\delta_1 \\gamma \\delta_2, \\hspace{2 mm} \\beta = \\delta_1 \\varphi \\delta_2$$"
    ]
   },
   {
@@ -501,9 +518,9 @@
    "source": [
     "# Secuencia de Derivación\n",
     "\n",
-    "- $β$ es derivable de $α \\hspace{2 mm}(α ⇒^* β)$ si y solo si existe una sucesión de palabras $γ_1, . . ., γ_n ( n ≥ 1)$ tales que\n",
+    "- $\\beta$ es derivable de $\\alpha \\hspace{2 mm}(\\alpha \\Rightarrow^* \\beta)$ si y solo si existe una sucesión de palabras $\\gamma_1, \\cdots, \\gamma_n ( n \\geq 1)$ tales que\n",
     "\n",
-    "$$α = γ_1⇒ γ_2⇒ . . . ⇒ γ_n = β$$"
+    "$$\\alpha = \\gamma_1 \\Rightarrow \\gamma_2 \\Rightarrow \\cdots \\Rightarrow \\gamma_n = \\beta$$"
    ]
   },
   {
@@ -518,7 +535,7 @@
     "\n",
     "- Se define como lenguaje generado por una gramática $G = (V, T, P, S)$ al conjunto de cadenas formadas por símbolos terminales y que son derivables a partir del símbolo de partida.\n",
     "- Es decir,\n",
-    "$$L(G) = \\{ u ∈ T^* ⎮ S ⇒^* u\\}$$"
+    "$$L(G) = \\{ u \\in T^* \\mid S \\Rightarrow^* u\\}$$"
    ]
   },
   {
@@ -545,8 +562,8 @@
    },
    "source": [
     "- Esta gramática genera el lenguaje\n",
-    "$$L(G) = \\{u ⎮ u ∈ \\{a, b\\}^+ \\hspace{1 mm} y \\hspace{1 mm} Na(u) = Nb(u)\\}$$\n",
-    "- donde $Na(u)$ y $Nb(u)$ son el número de apariciones de símbolos $a$ y $b$, en $u$, respectivamente"
+    "$$L(G) = \\{u \\mid u \\in \\{a, b\\}^+ \\hspace{1 mm} y \\hspace{1 mm} N_a(u) = N_b(u)\\}$$\n",
+    "- donde $N_a(u)$ y $N_b(u)$ son el número de apariciones de símbolos $a$ y $b$, en $u$, respectivamente"
    ]
   },
   {
@@ -677,12 +694,12 @@
    "source": [
     "# Lenguaje Generado\n",
     "\n",
-    "- Esta gramática genera el lenguaje: $\\{a^nb^nc^n ⎮ n = 1, 2, . . . \\}.$\n",
-    "$$aXbc ⇒ abXc ⇒ abYbcc ⇒ aYbbcc$$\n",
+    "- Esta gramática genera el lenguaje: $\\{a^nb^nc^n \\mid n = 1, 2, \\cdots \\}.$\n",
+    "$$aXbc \\Rightarrow abXc \\Rightarrow abYbcc \\Rightarrow aYbbcc$$\n",
     "- En este momento podemos aplicar dos reglas:\n",
-    "    - $aY → aa$, en cuyo caso producimos\n",
-    "$$aabbcc = a^2b^2c^2 ∈ L(G)$$\n",
-    "    - $aY → aaX$, en cuyo caso producimos $aaXbbcc$"
+    "    - $aY \\to aa$, en cuyo caso producimos\n",
+    "$$aabbcc = a^2b^2c^2 \\in L(G)$$\n",
+    "    - $aY \\to aaX$, en cuyo caso producimos $aaXbbcc$"
    ]
   },
   {
@@ -698,9 +715,9 @@
     "- Tipo 0: *Cualquier gramática*. Sin restricciones. Lenguajes recursivos\n",
     "- Tipo 1: *Lenguajes dependientes del contexto*. Si todas las producciones tienen la forma\n",
     "\n",
-    "$$α_1Aα_2 → α_1βα_2$$\n",
+    "$$\\alpha_1A\\alpha_2 \\to \\alpha_1 \\beta \\alpha_2$$\n",
     "\n",
-    "- donde $α_1$, $α_2$, $β ∈ (V ∪ T)^*, A ∈ V$, y $β ≠ ε$, excepto posiblemente la regla $S → ε$, en cuyo caso $S$ no aparece a la derecha de las reglas."
+    "- donde $\\alpha_1$, $\\alpha_2$, $\\beta \\in (V \\cup T)^*, A \\in V$, y $\\beta \\ne \\epsilon$, excepto posiblemente la regla $S \\to \\epsilon$, en cuyo caso $S$ no aparece a la derecha de las reglas."
    ]
   },
   {
@@ -713,15 +730,15 @@
    "source": [
     "- Tipo 2: *Lenguajes independientes del contexto*. Si cualquier producción tiene la forma\n",
     "\n",
-    "$$A → α$$\n",
+    "$$A \\to \\alpha$$\n",
     "\n",
-    "- donde $A ∈ V$, $α ∈ (V ∪ T)^*$. \n",
+    "- donde $A \\in V$, $\\alpha \\in (V \\cup T)^*$. \n",
     "- Tipo 3: *Conjuntos regulares*. Si toda regla tiene la forma\n",
     "\n",
-    "$$A → uB \\hspace{5 mm} ó \\hspace{5 mm}  A → u$$\n",
+    "$$A \\to uB \\hspace{5 mm} ó \\hspace{5 mm}  A \\to u$$\n",
     "\n",
     "- donde \n",
-    "$$u ∈ T^* \\hspace{5 mm} y \\hspace{5 mm} A, B ∈ V$$. "
+    "$$u \\in T^* \\hspace{5 mm} y \\hspace{5 mm} A, B \\in V$$. "
    ]
   },
   {
@@ -737,7 +754,7 @@
     "- Un lenguaje se dice que es de tipo $i (i = 0, 1, 2, 3)$ si y solo si es generado por una gramática de tipo $i$.\n",
     "- La clase o familia de lenguaje de tipo $i$ se denota por $L_i$.\n",
     "- Propiedad \n",
-    "$$L_3 ⊆ L_2 ⊆ L_1 ⊆ L_0$$"
+    "$$L_3 \\subseteq L_2 \\subseteq L_1 \\subseteq L_0$$"
    ]
   },
   {
@@ -751,8 +768,8 @@
     "# Ejemplo 1\n",
     "\n",
     "- Demostrar que la gramática\n",
-    "$$G = (\\{S\\}, \\{a, b\\}, \\{S → ε, S → aSb\\}, S)$$\n",
-    "- genera el lenguaje $L = \\{a^ib^i ⎮ i = 0, 1, 2, . . .\\}$"
+    "$$G = (\\{S\\}, \\{a, b\\}, \\{S \\to \\epsilon, S \\to aSb\\}, S)$$\n",
+    "- genera el lenguaje $L = \\{a^ib^i \\mid i = 0, 1, 2, \\cdots \\}$"
    ]
   },
   {
@@ -764,7 +781,7 @@
    },
    "source": [
     "- Inicialmente tenemos dos opciones:\n",
-    "$$S ⇒ ε,    \\hspace{5 mm}         S ⇒ aSb$$"
+    "$$S \\Rightarrow \\epsilon,    \\hspace{5 mm}         S \\Rightarrow aSb$$"
    ]
   },
   {
@@ -776,7 +793,7 @@
    },
    "source": [
     "- Con eso generamos la palabra vacía, o continuamos generando. Otra vez hay dos opciones:\n",
-    "$$S ⇒ S ⇒ aSb ⇒ ab,  \\hspace{5 mm}    S ⇒ aSb ⇒ aSb ⇒ aaSbb$$"
+    "$$S \\Rightarrow S \\Rightarrow aSb \\Rightarrow ab,  \\hspace{5 mm}    S \\Rightarrow aSb \\Rightarrow aSb \\Rightarrow aaSbb$$"
    ]
   },
   {
@@ -802,8 +819,8 @@
     "# Ejemplo 2\n",
     "\n",
     "- Encontrar el lenguaje generado por la siguiente gramática $G = (\\{S, A, B\\}, \\{a, b\\}, P, S)$ donde $P$ contiene las siguientes producciones:\n",
-    "$$S → aAB  \\hspace{5 mm}  bB → a  \\hspace{5 mm}  Ab → SBb$$\n",
-    "$$Aa → SaB \\hspace{5 mm}   B → SA  \\hspace{5 mm}  B → ab$$"
+    "$$S \\to aAB  \\hspace{5 mm}  bB \\to a  \\hspace{5 mm}  Ab \\to SBb$$\n",
+    "$$Aa \\to SaB \\hspace{5 mm}   B \\to SA  \\hspace{5 mm}  B \\to ab$$"
    ]
   },
   {
@@ -828,12 +845,12 @@
     "# Ejercicios\n",
     "\n",
     "- Encontrar una gramática de libre contexto para generar cada uno de los siguientes lenguajes\n",
-    "    1. $L = \\{a^ib^j ⎮ i, j ∈ N, i ≤ j\\}$\n",
-    "    2. $L = \\{a^ib^ja^jb^i ⎮ i, j ∈ N\\}$\n",
-    "    3. $L = \\{a^ib^ia^jb^j ⎮ i, j ∈ N\\}$\n",
-    "    4. $L = \\{a^ib^i ⎮ i ∈ N\\} ∪ \\{b^ia^i ⎮ i ∈ N\\}$\n",
-    "    5. $L = \\{uu^{-1} ⎮ u ∈ \\{a, b\\}^*\\}$\n",
-    "    6. $L = \\{a^ib^jc^{i+j} ⎮ i, j ∈ N\\}$\n",
+    "    1. $L = \\{a^ib^j \\mid i, j \\in N, i \\leq j\\}$\n",
+    "    2. $L = \\{a^ib^ja^jb^i \\mid i, j \\in N\\}$\n",
+    "    3. $L = \\{a^ib^ia^jb^j \\mid i, j \\in N\\}$\n",
+    "    4. $L = \\{a^ib^i \\mid i \\in N\\} \\cup \\{b^ia^i \\mid i \\in N\\}$\n",
+    "    5. $L = \\{uu^{-1} \\mid u \\in \\{a, b\\}^*\\}$\n",
+    "    6. $L = \\{a^ib^jc^{i+j} \\mid i, j \\in N\\}$\n",
     "- donde N es el conjunto de los números naturales incluyendo el 0."
    ]
   },
@@ -845,7 +862,7 @@
     }
    },
    "source": [
-    "# $L = \\{a^ib^j ⎮ i, j ∈ N, i ≤ j\\}$\n",
+    "# $L = \\{a^ib^j \\mid i, j ∈ N, i ≤ j\\}$\n",
     "\n"
    ]
   },
@@ -861,7 +878,7 @@
     "\n",
     "$$S → aSb$$\n",
     "\n",
-    "$$S → ε$$\n",
+    "$$S → \\epsilon$$\n",
     "\n",
     "$$S → Sb$$"
    ]
@@ -874,7 +891,7 @@
     }
    },
    "source": [
-    "# $L = \\{a^ib^ja^jb^i ⎮ i, j ∈ N\\}$"
+    "# $L = \\{a^ib^ja^jb^i \\mid i, j ∈ N\\}$"
    ]
   },
   {
@@ -893,7 +910,7 @@
     "\n",
     "$$B → bBa$$\n",
     "\n",
-    "$$B → ε$$"
+    "$$B → \\epsilon$$"
    ]
   },
   {
@@ -904,7 +921,7 @@
     }
    },
    "source": [
-    "# $L = \\{a^ib^ia^jb^j ⎮ i, j ∈ N\\}$"
+    "# $L = \\{a^ib^ia^jb^j \\mid i, j ∈ N\\}$"
    ]
   },
   {
@@ -915,9 +932,9 @@
     }
    },
    "source": [
-    "- Podemos generar $\\{a^ib^i ⎮ i ∈ N\\}$ con:\n",
+    "- Podemos generar $\\{a^ib^i \\mid i ∈ N\\}$ con:\n",
     "\n",
-    "$$S_1 → aS_1b,  \\hspace{5 mm}  S_1 → ε$$\n",
+    "$$S_1 → aS_1b,  \\hspace{5 mm}  S_1 → \\epsilon$$\n",
     "\n",
     "- El lenguaje $L$ se puede generar añadiendo:\n",
     "\n",
@@ -934,7 +951,7 @@
     }
    },
    "source": [
-    "# $L = \\{a^ib^i ⎮ i ∈ N\\}∪\\{b^ia^i ⎮ i ∈ N\\}$"
+    "# $L = \\{a^ib^i \\mid i ∈ N\\}∪\\{b^ia^i \\mid i ∈ N\\}$"
    ]
   },
   {
@@ -945,10 +962,10 @@
     }
    },
    "source": [
-    "- Podemos generar $\\{a^ib^i ⎮ i ∈ N\\}$ con:\n",
-    "$$S_1 → aS_1b, \\hspace{5 mm}   S_1 → ε$$\n",
-    "- y $\\{b^ia^i ⎮ i ∈ N\\}$ con:\n",
-    "$$S_2 → bS_2a, \\hspace{5 mm}   S_2 → ε$$\n",
+    "- Podemos generar $\\{a^ib^i \\mid i ∈ N\\}$ con:\n",
+    "$$S_1 → aS_1b, \\hspace{5 mm}   S_1 → \\epsilon$$\n",
+    "- y $\\{b^ia^i \\mid i ∈ N\\}$ con:\n",
+    "$$S_2 → bS_2a, \\hspace{5 mm}   S_2 → \\epsilon$$\n",
     "- El lenguaje $L$ se puede generar añadiendo:\n",
     "$$S → S_1,    \\hspace{5 mm}  S → S_2$$\n",
     "- siendo $S$ el símbolo inicial"
@@ -962,7 +979,7 @@
     }
    },
    "source": [
-    "# $L = \\{uu^{-1} ⎮ u ∈ \\{a, b\\}^*\\}$"
+    "# $L = \\{uu^{-1} \\mid u ∈ \\{a, b\\}^*\\}$"
    ]
   },
   {
@@ -979,7 +996,7 @@
     "\n",
     "$$S → bSb$$\n",
     "\n",
-    "$$S → ε$$"
+    "$$S → \\epsilon$$"
    ]
   },
   {
@@ -990,7 +1007,7 @@
     }
    },
    "source": [
-    "# $L = \\{a^ib^jc^{i+j} ⎮ i, j ∈ N\\}$"
+    "# $L = \\{a^ib^jc^{i+j} \\mid i, j ∈ N\\}$"
    ]
   },
   {
@@ -1009,7 +1026,7 @@
     "\n",
     "$$B → bBc$$\n",
     "\n",
-    "$$B → ε$$"
+    "$$B → \\epsilon$$"
    ]
   },
   {
@@ -1063,5 +1080,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
