--- a/notebooks/TeoriaComputacion_3.ipynb
+++ b/notebooks/TeoriaComputacion_3.ipynb
@@ -182,7 +182,8 @@
     "    - $<Natural> \\to <Digito> ⎮<Digito><Natural>$\n",
     "    - $<Entero> \\to <Natural>⎮<Signo><Natural>$\n",
     "    - $<Real> \\to <Entero>⎮<Entero>.$\n",
-    "    - $<Real> \\to <Entero>.<Natural>$"
+    "    - $<Real> \\to <Entero>.<Natural>$\n",
+    "    - $<Real> \\to <Entero>.<Natural>E<Entero>$"
    ]
   },
   {
@@ -193,7 +194,7 @@
     }
    },
    "source": [
-    "![](../figuras/automata_reales.png)"
+    "![](../figuras/automata_reales.pdf)"
    ]
   },
   {
@@ -207,14 +208,86 @@
     "# Ejercicios\n",
     "\n",
     "- Dibujar autómatas finitos deterministas que reconozcan los siguientes conjuntos de cadenas construidas sobre el alfabeto $A = \\{0, 1\\}$\n",
-    "    - cadenas acabadas en $00$\n",
-    "    - cadenas con dos unos consecutivos\n",
-    "    - cadenas que no contengan dos unos consecutivos\n",
-    "    - cadenas con dos ceros consecutivos o dos unos consecutivos\n",
-    "    - cadenas con dos ceros consecutivos y dos unos consecutivos\n",
-    "    - cadenas acabadas en $00$ o $11$\n",
-    "    - cadenas con un $1$ en la antepenúltima posición\n",
-    "    - cadenas de longitud $4$"
+    "    1. cadenas acabadas en $00$\n",
+    "    2. cadenas con dos unos consecutivos\n",
+    "    3. cadenas que no contengan dos unos consecutivos\n",
+    "    4. cadenas con dos ceros consecutivos o dos unos consecutivos\n",
+    "    5. cadenas con dos ceros consecutivos y dos unos consecutivos\n",
+    "    6. cadenas acabadas en $00$ o $11$\n",
+    "    7. cadenas con un $1$ en la penúltima posición\n",
+    "    8. cadenas de longitud $4$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Cadenas acabadas en $00$\n",
+    "\n",
+    "![](../figuras/cadena_fin_00.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Cadenas con dos unos consecutivos\n",
+    "\n",
+    "![](../figuras/cadena_dos_unos_consecutivos.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Cadenas que no contengan dos unos consecutivos\n",
+    "\n",
+    "![](../figuras/cadena_no_dos_unos_consecutivos.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Cadenas con dos ceros consecutivos o dos unos consecutivos\n",
+    "\n",
+    "![](../figuras/cadena_dos_0_o_dos_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Cadenas con dos ceros consecutivos y dos unos consecutivos\n",
+    "\n",
+    "![](../figuras/cadena_dos_0_y_dos_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Cadenas acabadas en $00$ o $11$\n",
+    "\n",
+    "![](../figuras/cadena_fin_dos_0_o_dos_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Cadenas con un $1$ en la penúltima posición\n",
+    "\n",
+    "![](../figuras/cadena_1_penultima_pos.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Cadenas de longitud $4$\n",
+    "\n",
+    "![](../figuras/cadena_longitud_4.png)"
    ]
   }
  ],
